sample/test-ingress/test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-test
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      name: web-test
  template:
    metadata:
      labels:
        name: web-test
    spec:
      containers:
        - name: web-test-container
          image: nginx:mainline-alpine
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: 1000Mi
