sample/test-ingress/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-test-service
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    name: web-test
