sample/test-ingress/test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-test-ingress
spec:
  backend:
    serviceName: web-test-service
    servicePort: 8080
